<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/windowBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="16dp">


    <TextView
        android:id="@+id/captcha_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="monospace"
        android:padding="10dp"
        android:text="@string/captcha_header"
        android:textStyle="bold" />

    <View
        android:id="@+id/captcha_header_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ededed"
        android:layout_below="@id/captcha_header"/>

    <TextView
        android:id="@+id/captcha_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/captcha_header_divider"
        android:padding="10dp"
        android:text="@string/captcha_description" />

    <TextView
        android:id="@+id/captcha_verification_code_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/captcha_description"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/dp_8_x_1"
        android:text="@string/captcha_verification_code_prompt" />

    <com.jacknkiarie.captchaui.CaptchaView
        android:id="@+id/captcha_view"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/captcha_description"
        android:layout_toRightOf="@id/captcha_verification_code_prompt" />

    <TextView
        android:id="@+id/captcha_input_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/captcha_input_message"
        android:layout_below="@id/captcha_view"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/captcha_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/captcha_input_prompt"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <View
        android:id="@+id/captcha_footer_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ededed"
        android:layout_below="@id/captcha_input"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/captcha_negative_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/captcha_footer_divider"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@android:string/cancel" />

    <Button
        android:id="@+id/captcha_positive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/captcha_footer_divider"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@android:string/ok"
        app:backgroundTint="@color/purple_500" />
</RelativeLayout>