<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_8_x_3"
            android:layout_marginTop="@dimen/dp_8_x_4"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/x_xxx_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tieFullName"
            style="@style/OutlineTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_8_x_3"
            android:layout_marginTop="@dimen/dp_8_x_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRegister"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tilFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tieEmail"
            style="@style/OutlineTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8_x_1"
            app:layout_constraintEnd_toEndOf="@id/tieFullName"
            app:layout_constraintStart_toStartOf="@id/tieFullName"
            app:layout_constraintTop_toBottomOf="@id/tieFullName"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiePassword"
            style="@style/OutlineTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8_x_1"
            app:layout_constraintEnd_toEndOf="@id/tieFullName"
            app:layout_constraintStart_toStartOf="@id/tieFullName"
            app:layout_constraintTop_toBottomOf="@id/tieEmail"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tieConPassword"
            style="@style/OutlineTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8_x_1"
            app:layout_constraintEnd_toEndOf="@id/tieFullName"
            app:layout_constraintStart_toStartOf="@id/tieFullName"
            app:layout_constraintTop_toBottomOf="@id/tiePassword"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tilConPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbTermsConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8_x_1"
            android:minWidth="0dp"
            app:layout_constraintStart_toStartOf="@id/tieFullName"
            app:layout_constraintTop_toBottomOf="@id/tieConPassword" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_4_x_15"
            android:layout_marginTop="@dimen/dp_4_x_5"
            android:text="@string/register"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/dp_8_x_2"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/tieEmail"
            app:layout_constraintStart_toStartOf="@id/tieEmail"
            app:layout_constraintTop_toBottomOf="@id/cbTermsConditions" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>